# docs/swagger.yaml
@@ -1,5 +1,18 @@
 basePath: /
 definitions:
+  config.VNCConfig:
+    properties:
+      colDepth:
+        type: integer
+      display:
+        type: string
+      password:
+        type: string
+      resolution:
+        type: string
+      viewOnly:
+        type: boolean
+    type: object
   docker.ContainerEndpoints:
     properties:
       container_id:
@@ -43,6 +56,8 @@ definitions:
           The ID of the image to use for the container
           @example ubuntu-base
         type: string
+      vnc_config:
+        $ref: '#/definitions/config.VNCConfig'
     required:
     - image_id
     type: object
